scaffolded for job controller

--- a/app/assets/stylesheets/login_registration.css
+++ b/app/assets/stylesheets/login_registration.css
@@ -3,11 +3,10 @@
     Created on : 10 Apr, 2013, 6:45:28 PM
     Author     : vikram
     Description:
-        Purpose of the stylesheet follows.
+        Purpose of the stylesheet is to provide design for login, registration and forget password page.
 */
 
-/* 
-   TODO customize this sample style
+/*
    Syntax recommendation http://www.w3.org/TR/REC-CSS2/
 */
 
