--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name),:html=>{:class=>"form-horizontal"}) do |f| %>
 
-  <%  customize_error_message(resource) %>
+  <%=  customize_error_message(resource) %>
 
   <% if resource.user_type == "employer" %>
 
