--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,8 +1,8 @@
-<div class="login-content-wrapper">
+<div class="body-content-wrapper">
 
-  <div class="login-content">
+  <div class="body-content-inner">
 
-    <div class="login">
+    <div class="body-content">
 
       <h2>Forgot Your Password?</h2>
 
