--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New job</h1>
+<div class="body-content-wrapper">
 
-<%= render 'form' %>
+  <div class="body-content-inner">
 
-<%= link_to 'Back', jobs_path %>
+    <div class="body-content">
+
+      <h2>New job</h2>
+
+      <%= render 'form' %>
+
+      <%#= link_to 'Back', jobs_path %>
+
+    </div>
+
+  </div>
+
+</div>
+
