--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
-<div class="login-content-wrapper">
+<div class="body-content-wrapper">
 
-  <div class="login-content">
+  <div class="body-content-inner">
 
-    <div id="login-register" class="login">
+    <div id="login-register" class="body-content">
 
       <%= render "form"  %>
 
