--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -2,9 +2,9 @@
 
   <% customize_error_message(@company)  %>
 
-  <%= render "companies/companies_field" %>
+  <%= render "companies/companies_field", :f => f %>
 
-  <div class="actions">
+  <div class="actions push-right-actions">
 
     <%= f.submit %>
 
