--- a/app/views/devise/registrations/_user_registration_form.html.erb
+++ b/app/views/devise/registrations/_user_registration_form.html.erb
@@ -1,7 +1,7 @@
 <%= f.hidden_field :user_type_id %>
 <div class="control-group input-group">
 
-  <%= f.label :user_type, "Who are You?", :class => "control-label" %>
+  <%= f.label :user_type, "Who are You?", :class => "control-label control-radio-label" %>
   <div class="controls radio-controls">
 
     <% ["employer", "job seeker"].each do |item| %>
