--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,6 @@
-<div class="body-content-wrapper">
+<div id="login-register">
 
-  <div class="body-content-inner">
-
-    <div id="login-register" class="body-content">
-
-      <%= render "form"  %>
-
-    </div>
-
-  </div>
+  <%= render "form"  %>
 
 </div>
+
