--- a/app/views/layouts/_sidebars.html.erb
+++ b/app/views/layouts/_sidebars.html.erb
@@ -2,9 +2,12 @@
 
   <h2 class="sidebar">Sidebar</h2>
 
-  <% if current_user %>
+  <% if user_signed_in? %>
 
-  
+    <li><%= link_to "Change Password", "#"  %></li>
+    <li><%= link_to "Companies", companies_path  %></li>
+    <li><%= link_to "Jobs", jobs_path  %></li>
+
   <% else %>
 
     <li><%= link_to "Sign In", new_user_session_path  %></li>
