--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing company</h1>
+<h2>Editing company</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @company %> |
-<%= link_to 'Back', companies_path %>
+<%#= link_to 'Show', @company %>
+<%#= link_to 'Back', companies_path %>
