--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,25 +1,36 @@
-<h1>Listing companies</h1>
+<h2>Listing companies</h2>
 
-<table>
-  <tr>
+<table id="companies-table" class="table table-bordered table-data-table">
+
+  <thead>
+
     <th>Name</th>
     <th>Description</th>
     <th>Url</th>
     <th></th>
     <th></th>
     <th></th>
-  </tr>
 
-<% @companies.each do |company| %>
-  <tr>
-    <td><%= company.name %></td>
-    <td><%= company.description %></td>
-    <td><%= company.url %></td>
-    <td><%= link_to 'Show', company %></td>
-    <td><%= link_to 'Edit', edit_company_path(company) %></td>
-    <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+  </thead>
+  <tbody>
+
+    <% @companies.each do |company| %>
+
+      <tr>
+
+        <td><%= company.name %></td>
+        <td><%= company.description %></td>
+        <td><%= company.url %></td>
+        <td><%= link_to 'Show', company %></td>
+        <td><%= link_to 'Edit', edit_company_path(company) %></td>
+        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+      </tr>
+
+    <% end %>
+
+  </tbody>
+
 </table>
 
 <br />
