--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -2,7 +2,8 @@
 
   <% customize_error_message(@job)%>
 
-  <%= f.hidden_field :company_id %>
+  <%= f.hidden_field :company_id, :value => "#{current_user.company.id}" %>
+  <%= f.hidden_field :user_id, :value => "#{current_user.id}" %>
   <div class="control-group input-group <%= "input-group-error" unless  @msg[:job_title].nil? %> ">
 
     <%= f.label :job_title, :class => "control-label" %>
@@ -70,11 +71,13 @@
     </div>
 
   </div>
-  <div class="field">
+  <div class="control-group input-group">
+
     <%= f.label :job_valid_till, "Job Expiry Date", :class => "control-label" %>
+
     <div class="controls">
 
-      <%= f.date_select :job_valid_till %>
+      <%= f.date_select :job_valid_till,{}, :class => "date-select"  %>
 
     </div>
 
