--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -4,9 +4,9 @@
 
   <thead>
 
-    <th>Name</th>
-    <th>Description</th>
-    <th>Url</th>
+    <th>Company Name</th>
+    <th>Company Description</th>
+    <th>Company Url</th>
     <th></th>
     <th></th>
     <th></th>
@@ -35,4 +35,4 @@
 
 <br />
 
-<%= link_to 'New Company', new_company_path %>
+<%#= link_to 'New Company', new_company_path %>
