--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -48,6 +48,12 @@
   }
   .form-horizontal {
 
+    .select-field {
+
+      width: 145px;
+
+    }
+
     .input-group-error .controls .text { background-color:pink;}
 
     fieldset .radio-controls {
@@ -108,15 +114,19 @@
   width: 100px;
 
 }
+
 .body-content .form-horizontal label.control-label:not(.control-radio-label) {
   padding: 0;
 }
+
 .form-horizontal .controls {
   margin-left: 115px;
 }
+
 .form-horizontal .actions {
   margin-left: 20px;
 }
+
 .form-horizontal .controls input:not([type="checkbox"]), .form-horizontal .controls textarea{
   width: 300px;
 }
@@ -150,6 +160,7 @@
   float: left;
   width: 235px;
 }
+
 .inline-notice {
   clear: none;
   float:left;
@@ -176,10 +187,12 @@
   /*margin-left: 2px;   */
   width: 505px;
 }
+
 #valid-email-disclaimer {
   color: #333333;
   display: none;
 }
+
 .inline-input-error-message {
   background-color: #FFEEEE;
   border-color: -moz-use-text-color pink pink;
@@ -193,6 +206,7 @@
   padding: 4px 8px;
   margin-left:215px;
 }
+
 .input-group-error label {
   color: #A80308 !important;
 }
@@ -200,10 +214,12 @@
 .input-group-error input.text, .input-group-error input.text:focus, .input-group-error textarea, .input-group-error textarea:focus, .input-group-error textarea.text, .input-group-error textarea.text:focus {
   border-color: #A80308 !important;
 }
+
 .input-group input.error, .input-group input.error:focus, .input-group textarea.error, .input-group textarea.error:focus {
   border-color: #A80308 !important;
   margin-bottom: 0;
 }
+
 .inline-error, .input-group-error .inline-error {
   color: #A80308 !important;
 }
@@ -230,4 +246,10 @@ inline-disclaimer-message, .inline-input-error-message {
   margin-bottom: 0;
   margin-left: 2px;
   width: 190px;
+}
+.select-div {
+  float: left;
+}
+.select-div-right {
+  margin-left: 4px;
 }
